--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -7,11 +7,10 @@
 <div class="row">
     <div class="col-xs-12">
         <app-recipe-item 
-        *ngFor="let recipeEl of recipes; let i = index"
+        *ngFor="let recipeEl of (recipeState | async).recipes; let i = index"
         [recipe]="recipeEl"
         [index]="i"
         ></app-recipe-item>
-        <!-- (recipeSelected)="onRecipeSelected(recipeEl)" -->
     </div>
 </div>
 
